smoothness fixed of collapse

--- a/test.css
+++ b/test.css
@@ -15,7 +15,10 @@ html{
     overflow-x: hidden;
     font-size: 67.5%;
 }
-
+button:focus{
+    outline: none !important;
+    border: none !important;
+}
 .container
 {
     padding: 0 2%;
@@ -142,10 +145,12 @@ a,a:focus{
 }
 .advantageSubHeading h2
 {
-    font-weight: 300;
-    letter-spacing: 1px;
-    text-align: center;
     color: white;
+    font-size: 1.3rem;
+    font-family: var(--primaryFont);
+    text-align: center;
+    margin-top: 1.5rem;
+    font-weight: 300;
 }
 
 
@@ -437,10 +442,7 @@ height: auto;
     height: 60px;
 
 }
-.tableContent
-{
-    /* background-color: #f37049; */
-}
+
 .line
 {
     width: 1px;
@@ -510,7 +512,7 @@ height: auto;
     font-size: 1.3rem;
     font-family: var(--primaryFont);
     text-align: center;
-    margin-top: 2rem;
+    margin-top: 1.5rem;
     font-weight: 300;
 }
 .relayCardWrapper
@@ -727,7 +729,7 @@ height: auto;
 @media only screen and (min-width : 480px)
 {
     html{
-        font-size: 80%;
+        font-size: 80% !important;
     }
     .relayCard
     {
@@ -903,7 +905,7 @@ height: auto;
     }
 
     html{
-        font-size: 90%;
+        font-size: 90% !important;
     }
     .cardWrapper
     {
@@ -951,11 +953,13 @@ height: auto;
     }
     .sliderTextWrapperBig
     {
+        min-height: 100%;
         flex-basis: 45%;
+        overflow: auto;
         display: flex;
         flex-direction: column;
         margin-right: 2rem;
-        justify-content: space-evenly;
+        justify-content: space-around;
         
     }
     .sliderTextBig 
@@ -978,7 +982,7 @@ height: auto;
    
     .sliderTextBig p{
         /* display: none; */
-        padding-top: 0.4rem;
+        padding-top: 0.2rem;
         font-size: 0.9em;
         font-family: var(--primaryFont);
     }
@@ -1017,7 +1021,7 @@ height: auto;
     .sliderimageBig
     {
         /* outline: 1px solid blue; */
-        height: 100%;
+        height: 70%;
         display: flex;
         justify-content: center;
     }
@@ -1067,7 +1071,7 @@ height: auto;
 @media only screen and (min-width : 900px)
 {
     html{
-        font-size: 100%;
+        font-size: 100% !important;
     }
     .mainWrapper
     {
